--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                 height="260"
               />
               <div class="card__description">
-                <h3 class="card__title">Игорь Демьяненко</h3>
-                <p class="card__text" lang="en">Product Designer</p>
+                <h3 class="card__title--team">Игорь Демьяненко</h3>
+                <p class="card__text--team" lang="en">Product Designer</p>
                 <ul class="social-web">
                   <li class="social-web__logo">
                     <a
