update scss and html

--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                 height="260"
               />
               <div class="card__description">
-                <h3 class="card__title">Ольга Репина</h3>
-                <p class="card__text" lang="en">Frontend Developer</p>
+                <h3 class="card__title--team">Ольга Репина</h3>
+                <p class="card__text--team" lang="en">Frontend Developer</p>
                 <ul class="social-web">
                   <li class="social-web__logo">
                     <a
@@ -436,8 +436,8 @@
                 height="260"
               />
               <div class="card__description">
-                <h3 class="card__title">Николай Тарасов</h3>
-                <p class="card__text" lang="en">Marketing</p>
+                <h3 class="card__title--team">Николай Тарасов</h3>
+                <p class="card__text--team" lang="en">Marketing</p>
                 <ul class="social-web">
                   <li class="social-web__logo">
                     <a
@@ -498,8 +498,8 @@
                 height="260"
               />
               <div class="card__description">
-                <h3 class="card__title">Михаил Ермаков</h3>
-                <p class="card__text" lang="en">UI Designer</p>
+                <h3 class="card__title--team">Михаил Ермаков</h3>
+                <p class="card__text--team" lang="en">UI Designer</p>
                 <ul class="social-web">
                   <li class="social-web__logo">
                     <a
