--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
               >
             </li>
           </ul>
-          <button class="menu-open" data-menu-open>
+           <button class="menu-open" data-menu-open>
             <svg
               class="mob-menu__icon"
               width="24"
@@ -109,10 +109,9 @@
               />
             </svg>
           </button>
+          <div class="mob-menu-content">
           <ul class="mob-menu-navigation">
-            <li>
-              <ul class="mob-menu__list">
-              <li class="mob-menu__item">
+            <li class="mob-menu__item">
                 <a class="mob-menu__link" href="index.html">Студия</a>
               </li>
               <li class="mob-menu__item">
@@ -121,9 +120,8 @@
               <li class="mob-menu__item">
                 <a class="mob-menu__link" href="">Контакты</a>
               </li>
-            </ul>
-            </li>
-            <li>
+              </ul>
+          
                <ul class="mob-menu__contacts">
               <li>
                 <a class="mob-menu__contacts--tel-link" href=""
@@ -137,7 +135,7 @@
               </li>
             </ul>
             </li>
-          </ul> 
+        
             <ul class="mob-menu__social-web">
               <li>
                 <a class="mob-menu__social-web--link" href=""
@@ -154,6 +152,7 @@
                 <a class="mob-menu__social-web--link" href="">LinkedIn</a>
               </li>
             </ul>
+            </div>
           </div>
         </div>
       </div>
