--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
           <h2 visually hidden>title</h2>
           <ul class="features__list">
             <li class="features__item">
-              <button class="features__thumb" type="button">
+              <div class="features__thumb">
                 <svg class="features__icon">
                   <use href="./images/icons.svg#icon-antenna-small"></use>
                 </svg>
-              </button>
+              </div>
               
 
               <h3 class="features__title">Внимание к деталям</h3>
@@ -300,11 +300,11 @@
               </p>
             </li>
             <li class="features__item">
-                <button class="features__thumb" type="button">
+                <div class="features__thumb">
                 <svg class="features__icon">
                   <use href="./images/icons.svg#icon-clock-small"></use>
                 </svg>
-              </button>
+                </div>
 
               <h3 class="features__title">Пунктуальность</h3>
               <p class="features__text">
@@ -313,11 +313,11 @@
               </p>
             </li>
             <li class="features__item">
-                <button class="features__thumb" type="button">
+                <div class="features__thumb">
                 <svg class="features__icon">
                   <use href="./images/icons.svg#icon-diagram-small"></use>
                 </svg>
-              </button>
+                </div>
               <h3 class="features__title">Планирование</h3>
               <p class="features__text">
                 Равным образом консультация с широким активом в значительной
@@ -325,11 +325,11 @@
               </p>
             </li>
             <li class="features__item">
-              <button class="features__thumb" type="button">
+              <div class="features__thumb" type="button">
                 <svg class="features__icon">
                   <use href="./images/icons.svg#icon-astronaut-small"></use>
                 </svg>
-              </button>
+              </div>
 
               <h3 class="features__title">Современные технологии</h3>
               <p class="features__text">
