--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <div class="thumb">
                 <picture>
             <source
-                srcset="./images/desktop/box1.jpg, ./images/desktop/box1@2x.jpg"
+                srcset="./images/desktop/box1.jpg, ./images/desktop/box@2x.jpg"
                 media="(min-width:1200px)"
             />
             
@@ -475,17 +475,17 @@
             <li class="card__item">
               <picture>
             <source
-                srcset="./images/desktop/img1.jpg, ./images/desktop.img1@2x.jpg"
+                srcset="./images/desktop/img1.jpg 1x, ./images/desktop.img1@2x.jpg"
                 media="(min-width:1200px)"
-            />
+            >
             <source
                 srcset="./images/tablet/img1.jpg, ./images/tablet/img1@2x.jpg"
                 media="(min-width:768px)"
-            />
+            >
             <source
                 srcset="./images/mobile/img1.jpg, ./images/mobile/img1@2x.jpg"
                 media="(min-width:320px)"
-            />
+            >
             <img src="./images/mobile/img1.jpg" alt="Ольга Репина" />
         </picture>
               
