update sass compiler

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./sass/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -199,15 +199,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio1.jpg, ./images/desktop/portfolio1@2x.jpg"
+                srcset="./images/desktop/portfolio1.jpg 1x, ./images/desktop/portfolio1@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio1.jpg, ./images/tablet/portfolio1@2x.jpg"
+                srcset="./images/tablet/portfolio1.jpg 1x, ./images/tablet/portfolio1@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio1.jpg, ./images/mobile/portfolio1@2x.jpg"
+                srcset="./images/mobile/portfolio1.jpg 1x, ./images/mobile/portfolio1@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio1.jpg" alt="Сайт на ноутбуке" />
@@ -234,15 +234,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio2.jpg, ./images/desktop/portfolio2@2x.jpg"
+                srcset="./images/desktop/portfolio2.jpg 1x, ./images/desktop/portfolio2@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio2.jpg, ./images/tablet/portfolio2@2x.jpg"
+                srcset="./images/tablet/portfolio2.jpg 1x, ./images/tablet/portfolio2@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio2.jpg, ./images/mobile/portfolio2@2x.jpg"
+                srcset="./images/mobile/portfolio2.jpg 1x, ./images/mobile/portfolio2@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio2.jpg" alt="Плакат" />
@@ -271,15 +271,15 @@
                 <div class="card__thumb">
                 <picture>
             <source
-                srcset="./images/desktop/portfolio3.jpg, ./images/desktop/portfolio3@2x.jpg"
+                srcset="./images/desktop/portfolio3.jpg 1x, ./images/desktop/portfolio3@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio3.jpg, ./images/tablet/portfolio3@2x.jpg"
+                srcset="./images/tablet/portfolio3.jpg 1x, ./images/tablet/portfolio3@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio3.jpg, ./images/mobile/portfolio3@2x.jpg"
+                srcset="./images/mobile/portfolio3.jpg 1x, ./images/mobile/portfolio3@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio3.jpg" alt="Рыбный ресторан" />
@@ -308,15 +308,15 @@
                 <div class="card__thumb">
                      <picture>
             <source
-                srcset="./images/desktop/portfolio4.jpg, ./images/desktop/portfolio4@2x.jpg"
+                srcset="./images/desktop/portfolio4.jpg 1x, ./images/desktop/portfolio4@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio4.jpg, ./images/tablet/portfolio4@2x.jpg"
+                srcset="./images/tablet/portfolio4.jpg 1x, ./images/tablet/portfolio4@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio4.jpg, ./images/mobile/portfolio4@2x.jpg"
+                srcset="./images/mobile/portfolio4.jpg 1x, ./images/mobile/portfolio4@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio4.jpg" alt="Наушники" />
@@ -345,15 +345,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio5.jpg, ./images/desktop/portfolio5@2x.jpg"
+                srcset="./images/desktop/portfolio5.jpg 1x, ./images/desktop/portfolio5@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio5.jpg, ./images/tablet/portfolio5@2x.jpg"
+                srcset="./images/tablet/portfolio5.jpg 1x, ./images/tablet/portfolio5@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio5.jpg, ./images/mobile/portfolio5@2x.jpg"
+                srcset="./images/mobile/portfolio5.jpg 1x, ./images/mobile/portfolio5@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio5.jpg" alt="Коробки" />
@@ -382,15 +382,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio6.jpg, ./images/desktop/portfolio6@2x.jpg"
+                srcset="./images/desktop/portfolio6.jpg 1x, ./images/desktop/portfolio6@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio6.jpg, ./images/tablet/portfolio6@2x.jpg"
+                srcset="./images/tablet/portfolio6. 1x, ./images/tablet/portfolio6@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio6.jpg, ./images/mobile/portfolio6@2x.jpg"
+                srcset="./images/mobile/portfolio6.jpg 1x, ./images/mobile/portfolio6@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio6.jpg" alt="Монитор" />
@@ -419,15 +419,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio7.jpg, ./images/desktop/portfolio7@2x.jpg"
+                srcset="./images/desktop/portfolio7.jpg 1x, ./images/desktop/portfolio7@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio7.jpg, ./images/tablet/portfolio7@2x.jpg"
+                srcset="./images/tablet/portfolio7.jpg 1x, ./images/tablet/portfolio7@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio7.jpg, ./images/mobile/portfolio7@2x.jpg"
+                srcset="./images/mobile/portfolio7.jpg 1x, ./images/mobile/portfolio7@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio7.jpg" alt="Журнал" />
@@ -456,15 +456,15 @@
                 <div class="card__thumb">
                   <picture>
             <source
-                srcset="./images/desktop/portfolio8.jpg, ./images/desktop/portfolio8@2x.jpg"
+                srcset="./images/desktop/portfolio8.jpg 1x, ./images/desktop/portfolio8@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio8.jpg, ./images/tablet/portfolio8@2x.jpg"
+                srcset="./images/tablet/portfolio8.jpg 1x, ./images/tablet/portfolio8@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio8.jpg, ./images/mobile/portfolio8@2x.jpg"
+                srcset="./images/mobile/portfolio8.jpg 1x, ./images/mobile/portfolio8@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio8.jpg" alt="Ярлык" />
@@ -491,15 +491,15 @@
                 <div class="card__thumb">
                        <picture>
             <source
-                srcset="./images/desktop/portfolio9.jpg, ./images/desktop/portfolio9@2x.jpg"
+                srcset="./images/desktop/portfolio9.jpg 1x, ./images/desktop/portfolio9@2x.jpg 2x"
                 media="(min-width:1200px)"
             />
             <source
-                srcset="./images/tablet/portfolio9.jpg, ./images/tablet/portfolio9@2x.jpg"
+                srcset="./images/tablet/portfolio9.jpg 1x, ./images/tablet/portfolio9@2x.jpg 2x"
                 media="(min-width:768px)"
             />
             <source
-                srcset="./images/mobile/portfolio9.jpg, ./images/mobile/portfolio9@2x.jpg"
+                srcset="./images/mobile/portfolio9.jpg 1x, ./images/mobile/portfolio9@2x.jpg 2x"
                 media="(min-width:320px)"
             />
             <img src="./images/mobile/portfolio9.jpg" alt="Ноутбук" />
